target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'='", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", 
                     "'<.'", "'>.'", "'<=.'", "'>=.'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "';'", "'.'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONT", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNC", "IF", "PARA", "RETURN", "THEN", "VAR", 
                      "WHILE", "ENDDO", "ADD", "ADDF", "SUB", "SUBF", "MUL", 
                      "MULF", "DIV", "DIVF", "MOD", "ASS", "NOT", "AND", 
                      "OR", "EQUAL", "NEQUAL", "SMALLER", "LARGER", "SEQUAL", 
                      "LEQUAL", "NEQUALF", "SMALLERF", "LARGERF", "SEQUALF", 
                      "LEQUALF", "RBRACKET_L", "RBRACKET_R", "SBRACKET_L", 
                      "SBRACKET_R", "CBRACKET_L", "CBRACKET_R", "SEMI", 
                      "DOT", "COMMA", "COLON", "INT_LIT", "HEX_LIT", "OCT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", "WS", "CMT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_all_literal = 1
    RULE_basic_literal = 2
    RULE_array_lit = 3
    RULE_func_declare = 4
    RULE_func_para = 5
    RULE_func_body = 6
    RULE_statement_list = 7
    RULE_statement = 8
    RULE_var_declare = 9
    RULE_id_init = 10
    RULE_init_variable = 11
    RULE_assignment = 12
    RULE_if_stmt = 13
    RULE_for_stmt = 14
    RULE_while_stmt = 15
    RULE_do_stmt = 16
    RULE_funcCall = 17
    RULE_ret_stmt = 18
    RULE_expression = 19
    RULE_exp2 = 20
    RULE_index_exp = 21

    ruleNames =  [ "program", "all_literal", "basic_literal", "array_lit", 
                   "func_declare", "func_para", "func_body", "statement_list", 
                   "statement", "var_declare", "id_init", "init_variable", 
                   "assignment", "if_stmt", "for_stmt", "while_stmt", "do_stmt", 
                   "funcCall", "ret_stmt", "expression", "exp2", "index_exp" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONT=4
    DO=5
    ELSE=6
    ELSEIF=7
    ENDBODY=8
    ENDIF=9
    ENDFOR=10
    ENDWHILE=11
    FOR=12
    FUNC=13
    IF=14
    PARA=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    ENDDO=20
    ADD=21
    ADDF=22
    SUB=23
    SUBF=24
    MUL=25
    MULF=26
    DIV=27
    DIVF=28
    MOD=29
    ASS=30
    NOT=31
    AND=32
    OR=33
    EQUAL=34
    NEQUAL=35
    SMALLER=36
    LARGER=37
    SEQUAL=38
    LEQUAL=39
    NEQUALF=40
    SMALLERF=41
    LARGERF=42
    SEQUALF=43
    LEQUALF=44
    RBRACKET_L=45
    RBRACKET_R=46
    SBRACKET_L=47
    SBRACKET_R=48
    CBRACKET_L=49
    CBRACKET_R=50
    SEMI=51
    DOT=52
    COMMA=53
    COLON=54
    INT_LIT=55
    HEX_LIT=56
    OCT_LIT=57
    FLOAT_LIT=58
    BOOL_LIT=59
    STRING_LIT=60
    WS=61
    CMT=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    UNTERMINATED_COMMENT=65
    ERROR_CHAR=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SEMI)
            else:
                return self.getToken(BKITParser.SEMI, i)

        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Func_declareContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 44
                self.var_declare()
                self.state = 45
                self.match(BKITParser.SEMI)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNC:
                self.state = 52
                self.func_declare()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class All_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basic_literal(self):
            return self.getTypedRuleContext(BKITParser.Basic_literalContext,0)


        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_all_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAll_literal" ):
                return visitor.visitAll_literal(self)
            else:
                return visitor.visitChildren(self)




    def all_literal(self):

        localctx = BKITParser.All_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_all_literal)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INT_LIT, BKITParser.HEX_LIT, BKITParser.OCT_LIT, BKITParser.FLOAT_LIT, BKITParser.BOOL_LIT, BKITParser.STRING_LIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.basic_literal()
                pass
            elif token in [BKITParser.CBRACKET_L]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.array_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Basic_literalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LIT(self):
            return self.getToken(BKITParser.INT_LIT, 0)

        def OCT_LIT(self):
            return self.getToken(BKITParser.OCT_LIT, 0)

        def HEX_LIT(self):
            return self.getToken(BKITParser.HEX_LIT, 0)

        def FLOAT_LIT(self):
            return self.getToken(BKITParser.FLOAT_LIT, 0)

        def BOOL_LIT(self):
            return self.getToken(BKITParser.BOOL_LIT, 0)

        def STRING_LIT(self):
            return self.getToken(BKITParser.STRING_LIT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_basic_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasic_literal" ):
                return visitor.visitBasic_literal(self)
            else:
                return visitor.visitChildren(self)




    def basic_literal(self):

        localctx = BKITParser.Basic_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_basic_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.INT_LIT) | (1 << BKITParser.HEX_LIT) | (1 << BKITParser.OCT_LIT) | (1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.BOOL_LIT) | (1 << BKITParser.STRING_LIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CBRACKET_L(self):
            return self.getToken(BKITParser.CBRACKET_L, 0)

        def CBRACKET_R(self):
            return self.getToken(BKITParser.CBRACKET_R, 0)

        def all_literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.All_literalContext)
            else:
                return self.getTypedRuleContext(BKITParser.All_literalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_lit" ):
                return visitor.visitArray_lit(self)
            else:
                return visitor.visitChildren(self)




    def array_lit(self):

        localctx = BKITParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_array_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(BKITParser.CBRACKET_L)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.CBRACKET_L) | (1 << BKITParser.INT_LIT) | (1 << BKITParser.HEX_LIT) | (1 << BKITParser.OCT_LIT) | (1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.BOOL_LIT) | (1 << BKITParser.STRING_LIT))) != 0):
                self.state = 67
                self.all_literal()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 68
                    self.match(BKITParser.COMMA)
                    self.state = 69
                    self.all_literal()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 77
            self.match(BKITParser.CBRACKET_R)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def func_para(self):
            return self.getTypedRuleContext(BKITParser.Func_paraContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_declare" ):
                return visitor.visitFunc_declare(self)
            else:
                return visitor.visitChildren(self)




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BKITParser.FUNC)
            self.state = 80
            self.match(BKITParser.COLON)
            self.state = 81
            self.match(BKITParser.ID)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARA:
                self.state = 82
                self.func_para()


            self.state = 85
            self.func_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_paraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(BKITParser.PARA, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def init_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Init_variableContext)
            else:
                return self.getTypedRuleContext(BKITParser.Init_variableContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_func_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_para" ):
                return visitor.visitFunc_para(self)
            else:
                return visitor.visitChildren(self)




    def func_para(self):

        localctx = BKITParser.Func_paraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_para)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BKITParser.PARA)
            self.state = 88
            self.match(BKITParser.COLON)
            self.state = 89
            self.init_variable()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 90
                self.match(BKITParser.COMMA)
                self.state = 91
                self.init_variable()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = BKITParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(BKITParser.BODY)
            self.state = 98
            self.match(BKITParser.COLON)
            self.state = 99
            self.statement_list()
            self.state = 100
            self.match(BKITParser.ENDBODY)
            self.state = 101
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(BKITParser.Var_declareContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SEMI)
            else:
                return self.getToken(BKITParser.SEMI, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.StatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.StatementContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_statement_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = BKITParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 103
                self.var_declare()
                self.state = 104
                self.match(BKITParser.SEMI)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 111
                    self.statement() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def assignment(self):
            return self.getTypedRuleContext(BKITParser.AssignmentContext,0)


        def BREAK(self):
            return self.getToken(BKITParser.BREAK, 0)

        def CONT(self):
            return self.getToken(BKITParser.CONT, 0)

        def funcCall(self):
            return self.getTypedRuleContext(BKITParser.FuncCallContext,0)


        def ret_stmt(self):
            return self.getTypedRuleContext(BKITParser.Ret_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(BKITParser.While_stmtContext,0)


        def do_stmt(self):
            return self.getTypedRuleContext(BKITParser.Do_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BKITParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.ID, BKITParser.BREAK, BKITParser.CONT, BKITParser.RETURN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 117
                    self.assignment()
                    pass

                elif la_ == 2:
                    self.state = 118
                    self.match(BKITParser.BREAK)
                    pass

                elif la_ == 3:
                    self.state = 119
                    self.match(BKITParser.CONT)
                    pass

                elif la_ == 4:
                    self.state = 120
                    self.funcCall()
                    pass

                elif la_ == 5:
                    self.state = 121
                    self.ret_stmt()
                    pass


                self.state = 124
                self.match(BKITParser.SEMI)
                pass
            elif token in [BKITParser.DO, BKITParser.FOR, BKITParser.IF, BKITParser.WHILE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.IF]:
                    self.state = 125
                    self.if_stmt()
                    pass
                elif token in [BKITParser.FOR]:
                    self.state = 126
                    self.for_stmt()
                    pass
                elif token in [BKITParser.WHILE]:
                    self.state = 127
                    self.while_stmt()
                    pass
                elif token in [BKITParser.DO]:
                    self.state = 128
                    self.do_stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def id_init(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Id_initContext)
            else:
                return self.getTypedRuleContext(BKITParser.Id_initContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(BKITParser.VAR)
            self.state = 134
            self.match(BKITParser.COLON)
            self.state = 135
            self.id_init()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 136
                self.match(BKITParser.COMMA)
                self.state = 137
                self.id_init()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_initContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_variable(self):
            return self.getTypedRuleContext(BKITParser.Init_variableContext,0)


        def ASS(self):
            return self.getToken(BKITParser.ASS, 0)

        def all_literal(self):
            return self.getTypedRuleContext(BKITParser.All_literalContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_id_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_init" ):
                return visitor.visitId_init(self)
            else:
                return visitor.visitChildren(self)




    def id_init(self):

        localctx = BKITParser.Id_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.init_variable()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASS:
                self.state = 144
                self.match(BKITParser.ASS)
                self.state = 145
                self.all_literal()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_variableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def SBRACKET_L(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SBRACKET_L)
            else:
                return self.getToken(BKITParser.SBRACKET_L, i)

        def SBRACKET_R(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.SBRACKET_R)
            else:
                return self.getToken(BKITParser.SBRACKET_R, i)
